--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,73 +1,75 @@
-name: Build Chaquopy Bundles
+name: Build Chaquopy Android Library AAR
 
 on:
-  workflow_dispatch:
-    inputs:
-      python:
-        description: 'Host Python (major.minor) used for building (e.g. 3.11)'
-        required: false
-        default: '3.11'
-      packages:
-        description: 'Comma-separated pip requirements, e.g. "yt-dlp==2025.08.01,pycryptodome==3.19.0"'
-        required: false
-        default: 'yt-dlp'
-      abis:
-        description: 'Space-separated ABIs (e.g. "arm64-v8a armeabi-v7a x86_64")'
-        required: false
-        default: 'arm64-v8a x86_64'
-      chaquopy_ref:
-        description: 'Chaquopy repo ref (branch/tag/commit; optional)'
-        required: false
-        default: 'master'
-
   push:
-    branches:
-      - main
+    branches: [ main, master ]
   pull_request:
-    branches:
-      - main
+    branches: [ main, master ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout builder
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        
+    - name: Setup Android SDK
+      uses: android-actions/setup-android@v3
+      with:
+        cmdline-tools-version: '11076708'
+        
+    - name: Accept Android SDK licenses
+      run: yes | sdkmanager --licenses || true
+      
+    - name: Create gradle wrapper
+      run: |
+        mkdir -p gradle/wrapper
+        echo "distributionBase=GRADLE_USER_HOME" > gradle/wrapper/gradle-wrapper.properties
+        echo "distributionPath=wrapper/dists" >> gradle/wrapper/gradle-wrapper.properties
+        echo "distributionUrl=https\\://services.gradle.org/distributions/gradle-8.4-bin.zip" >> gradle/wrapper/gradle-wrapper.properties
+        echo "zipStoreBase=GRADLE_USER_HOME" >> gradle/wrapper/gradle-wrapper.properties
+        echo "zipStorePath=wrapper/dists" >> gradle/wrapper/gradle-wrapper.properties
+        
+    - name: Download gradle wrapper files
+      run: |
+        curl -L https://raw.githubusercontent.com/gradle/gradle/v8.4.0/gradle/wrapper/gradle-wrapper.jar -o gradle/wrapper/gradle-wrapper.jar
+        curl -L https://raw.githubusercontent.com/gradle/gradle/v8.4.0/gradlew -o gradlew
+        curl -L https://raw.githubusercontent.com/gradle/gradle/v8.4.0/gradlew.bat -o gradlew.bat
+      
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+        
+    - name: Cache Gradle packages
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle-
+        
+    - name: Build Debug AAR
+      run: ./gradlew :chaquopy-lib:assembleDebug
+        
+    - name: Upload Debug AAR
+      uses: actions/upload-artifact@v4
+      with:
+        name: chaquopy-lib-debug.aar
+        path: chaquopy-lib/build/outputs/aar/chaquopy-lib-debug.aar
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ github.event.inputs.python || '3.11' }}
-
-      - name: Install system build deps
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y build-essential git pkg-config \
-            zlib1g-dev libssl-dev libbz2-dev libreadline-dev libsqlite3-dev \
-            libffi-dev liblzma-dev libgmp-dev
-
-      - name: Run bundle builder
-        env:
-          CHAQUOPY_REF: ${{ github.event.inputs.chaquopy_ref || 'master' }}
-          OUT_BASE: ${{ github.workspace }}/bundle-output
-        run: |
-          PY_VER="${{ github.event.inputs.python || '3.11' }}"
-          PKGS="${{ github.event.inputs.packages || 'yt-dlp' }}"
-          ABIS="${{ github.event.inputs.abis || 'arm64-v8a x86_64' }}"
-
-          IFS=',' read -ra REQ_ARR <<< "$PKGS"
-          read -r -a ABI_ARR <<< "$ABIS"
-
-          ARGS=( --python "$PY_VER" )
-          for r in "${REQ_ARR[@]}"; do ARGS+=( --package "$r" ); done
-          for a in "${ABI_ARR[@]}"; do ARGS+=( --abi "$a" ); done
-
-          echo "Invoking: scripts/build_via_gradle.sh ${ARGS[*]}"
-          chmod +x scripts/build_via_gradle.sh
-          ./scripts/build_via_gradle.sh "${ARGS[@]}"
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: chaquopy-bundles
-          path: bundle-output/
+    - name: Build Release AAR
+      run: ./gradlew :chaquopy-lib:assembleRelease
+      
+    - name: Upload Release AAR
+      uses: actions/upload-artifact@v4
+      with:
+        name: chaquopy-lib-release.aar
+        path: chaquopy-lib/build/outputs/aar/chaquopy-lib-release.aar
