--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,78 @@
 name: Build Chaquopy Android Library AAR - All ABI Variants
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  schedule:
+    - cron: '0 */12 * * *'
+  workflow_dispatch:
+    inputs:
+      force_build:
+        description: 'Force build even if no new yt-dlp version'
+        required: false
+        default: false
+        type: boolean
 
 jobs:
-  build:
+  check-ytdlp-version:
     runs-on: ubuntu-latest
+    outputs:
+      should_build: ${{ steps.version_check.outputs.should_build }}
+      ytdlp_version: ${{ steps.version_check.outputs.ytdlp_version }}
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    - name: Check yt-dlp version
+      id: version_check
+      run: |
+        LATEST_VERSION=$(curl -s https://pypi.org/pypi/yt-dlp/json | python -c "import sys, json; print(json.load(sys.stdin)['info']['version'])")
+        echo "Latest yt-dlp version: $LATEST_VERSION"
+        echo "ytdlp_version=$LATEST_VERSION" >> $GITHUB_OUTPUT
+        
+        if [ -f ".ytdlp_version" ]; then
+          STORED_VERSION=$(cat .ytdlp_version)
+          echo "Stored version: $STORED_VERSION"
+        else
+          STORED_VERSION=""
+          echo "No stored version found"
+        fi
+        
+        if [ "${{ github.event.inputs.force_build }}" = "true" ]; then
+          echo "Force build requested"
+          echo "should_build=true" >> $GITHUB_OUTPUT
+        elif [ "$LATEST_VERSION" != "$STORED_VERSION" ]; then
+          echo "New version detected: $LATEST_VERSION (was: $STORED_VERSION)"
+          echo "should_build=true" >> $GITHUB_OUTPUT
+        else
+          echo "No new version, skipping build"
+          echo "should_build=false" >> $GITHUB_OUTPUT
+        fi
+
+    - name: Update version file
+      if: steps.version_check.outputs.should_build == 'true'
+      run: |
+        echo "${{ steps.version_check.outputs.ytdlp_version }}" > .ytdlp_version
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add .ytdlp_version
+        git diff --staged --quiet || git commit -m "Update yt-dlp version to ${{ steps.version_check.outputs.ytdlp_version }}"
+        git push
+
+  build:
+    needs: check-ytdlp-version
+    runs-on: ubuntu-latest
+    if: needs.check-ytdlp-version.outputs.should_build == 'true'
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        # Fetch the latest changes including the version file update
+        ref: ${{ github.ref }}
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -84,19 +144,19 @@ jobs:
     - name: Upload ABI32 Group AAR
       uses: actions/upload-artifact@v4
       with:
-        name: lib-abi32-debug
+        name: lib-abi32-debug-ytdlp-${{ needs.check-ytdlp-version.outputs.ytdlp_version }}
         path: lib/build/outputs/aar/lib-abi32-debug.aar
 
     - name: Upload ARM32 AAR
       uses: actions/upload-artifact@v4
       with:
-        name: lib-arm32-debug
+        name: lib-arm32-debug-ytdlp-${{ needs.check-ytdlp-version.outputs.ytdlp_version }}
         path: lib/build/outputs/aar/lib-arm32-debug.aar
 
     - name: Upload x86 AAR
       uses: actions/upload-artifact@v4
       with:
-        name: lib-x86-debug
+        name: lib-x86-debug-ytdlp-${{ needs.check-ytdlp-version.outputs.ytdlp_version }}
         path: lib/build/outputs/aar/lib-x86-debug.aar
 
     - name: Stop Gradle daemon (safe switch)
@@ -139,19 +199,19 @@ jobs:
     - name: Upload ABI64 Group AAR
       uses: actions/upload-artifact@v4
       with:
-        name: lib-abi64-debug
+        name: lib-abi64-debug-ytdlp-${{ needs.check-ytdlp-version.outputs.ytdlp_version }}
         path: lib/build/outputs/aar/lib-abi64-debug.aar
 
     - name: Upload ARM64 AAR
       uses: actions/upload-artifact@v4
       with:
-        name: lib-arm64-debug
+        name: lib-arm64-debug-ytdlp-${{ needs.check-ytdlp-version.outputs.ytdlp_version }}
         path: lib/build/outputs/aar/lib-arm64-debug.aar
 
     - name: Upload x86_64 AAR
       uses: actions/upload-artifact@v4
       with:
-        name: lib-x86_64-debug
+        name: lib-x86_64-debug-ytdlp-${{ needs.check-ytdlp-version.outputs.ytdlp_version }}
         path: lib/build/outputs/aar/lib-x86_64-debug.aar
 
     - name: Stop Gradle daemon (cleanup)
@@ -160,7 +220,7 @@ jobs:
     # Build summary
     - name: List all built AARs
       run: |
-        echo "All built AARs:"
+        echo "All built AARs for yt-dlp version ${{ needs.check-ytdlp-version.outputs.ytdlp_version }}:"
         find lib/build/outputs/aar/ -name "*.aar" -exec ls -lh {} \; || true
         echo ""
         echo "Total AAR count:"
