--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Restore cached version
+      uses: actions/cache/restore@v3
+      id: cache-version
+      with:
+        path: .ytdlp_version
+        key: ytdlp-version
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -52,15 +59,16 @@ jobs:
           echo "should_build=false" >> $GITHUB_OUTPUT
         fi
 
-    - name: Update version file
+    - name: Save new version to cache
       if: steps.version_check.outputs.should_build == 'true'
-      run: |
-        echo "${{ steps.version_check.outputs.ytdlp_version }}" > .ytdlp_version
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add .ytdlp_version
-        git diff --staged --quiet || git commit -m "Update yt-dlp version to ${{ steps.version_check.outputs.ytdlp_version }}"
-        git push
+      run: echo "${{ steps.version_check.outputs.ytdlp_version }}" > .ytdlp_version
+    
+    - name: Cache new version
+      if: steps.version_check.outputs.should_build == 'true'
+      uses: actions/cache/save@v3
+      with:
+        path: .ytdlp_version
+        key: ytdlp-version
 
   build:
     needs: check-ytdlp-version
@@ -70,9 +78,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        # Fetch the latest changes including the version file update
-        ref: ${{ github.ref }}
 
     - name: Set up JDK 17
       uses: actions/setup-java@v4
