--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -230,3 +230,71 @@ jobs:
         echo ""
         echo "Total AAR count:"
         find lib/build/outputs/aar/ -name "*.aar" | wc -l || true
+
+  # --------------------------
+  # Create GitHub Release
+  # --------------------------
+  release:
+    needs: [check-ytdlp-version, build]
+    runs-on: ubuntu-latest
+    if: needs.check-ytdlp-version.outputs.should_build == 'true'
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Download all artifacts
+      uses: actions/download-artifact@v4
+      with:
+        path: ./artifacts
+        
+    - name: Create release directory and move AARs
+      run: |
+        mkdir -p release
+        find ./artifacts -name "*.aar" -exec cp {} ./release/ \;
+        ls -la ./release/
+        
+    - name: Generate release notes
+      id: release_notes
+      run: |
+        RELEASE_NOTES=$(cat << 'EOF'
+        ## Android AAR Libraries for yt-dlp ${{ needs.check-ytdlp-version.outputs.ytdlp_version }}
+        
+        Built with Chaquopy for various Android architectures.
+        
+        ### Python 3.11 variants:
+        - **ABI32 Group** (armeabi-v7a + x86): `lib-abi32-debug.aar`
+        - **ARM32 only** (armeabi-v7a): `lib-arm32-debug.aar`
+        - **x86 only** (x86): `lib-x86-debug.aar`
+        
+        ### Python 3.12 variants:
+        - **ABI64 Group** (arm64-v8a + x86_64): `lib-abi64-debug.aar`
+        - **ARM64 only** (arm64-v8a): `lib-arm64-debug.aar`
+        - **x86_64 only** (x86_64): `lib-x86_64-debug.aar`
+        
+        ### Usage
+        Add the appropriate AAR to your Android project based on your target architecture requirements.
+        
+        Built on: $(date -u +"%Y-%m-%d %H:%M:%S UTC")
+        EOF
+        )
+        
+        # Set multiline output
+        {
+          echo "notes<<EOF"
+          echo "$RELEASE_NOTES"
+          echo "EOF"
+        } >> $GITHUB_OUTPUT
+    
+    - name: Create GitHub Release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        # Create the release
+        gh release create "v${{ needs.check-ytdlp-version.outputs.ytdlp_version }}" \
+          --title "yt-dlp ${{ needs.check-ytdlp-version.outputs.ytdlp_version }}" \
+          --notes '${{ steps.release_notes.outputs.notes }}' \
+          --latest
+        
+        # Upload all AAR files
+        gh release upload "${{ needs.check-ytdlp-version.outputs.ytdlp_version }}" release/*.aar
