--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -238,6 +238,8 @@ jobs:
     needs: [check-ytdlp-version, build]
     runs-on: ubuntu-latest
     if: needs.check-ytdlp-version.outputs.should_build == 'true'
+    permissions:
+      contents: write
     
     steps:
     - name: Checkout code
